
syntax = "proto3";


import "commonmodule/IdentifiedObject.proto";
import "commonmodule/ReadingMMXU.proto";
import "commonmodule/ReadingMMTR.proto";

option java_package = "com.oes.openfmb.proto";

message ResourceReadingValue {
  IdentifiedObject measurementValue = 2;
  string terminalID = 4;  
  ReadingMMXU readingMMXU = 6;
  ReadingMMTR readingMMTR = 8;
}




